style-fix: navbar buttons were overlapping improvement: App will use 'MemoryRouter' to avoid updating the browser location URL.

--- a/src/styles/animations.css
+++ b/src/styles/animations.css
@@ -61,18 +61,7 @@
   content: '';
   position: absolute;
   top: 0;
-  left: -100%;
   width: 100%;
   height: 100%;
-  background: linear-gradient(
-    90deg,
-    transparent,
-    rgba(255, 255, 255, 0.2),
-    transparent
-  );
   transition: 0.5s;
-}
-
-.nav-link:hover::after {
-  left: 100%;
 }
